--- a/oauth-server/src/main/resources/templates/404.html
+++ b/oauth-server/src/main/resources/templates/404.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+
 <html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<base th:href="${#request.getContextPath()}+'/'">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<title>404 HTML Template by Colorlib</title>
